# chatgpt_gui_in_c

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.c
